[gd_scene load_steps=7 format=3 uid="uid://tx2s4rdqpdyo"]

[ext_resource type="Script" path="res://ui/switch_theme_dialog.gd" id="1_wvycn"]
[ext_resource type="Texture2D" uid="uid://da434f1or7fn8" path="res://themes/antarctic/icon.png" id="2_sis6n"]
[ext_resource type="Texture2D" uid="uid://fk5toascw521" path="res://themes/antarctic/night_icon.png" id="3_0nloc"]
[ext_resource type="Texture2D" uid="uid://bir561mn1bmk1" path="res://themes/cave/icon.png" id="4_uvgwp"]
[ext_resource type="Texture2D" uid="uid://daxsj3yo6v5t2" path="res://themes/underwater/icon.png" id="5_om72x"]
[ext_resource type="Texture2D" uid="uid://baevy21dk7slt" path="res://themes/castle/icon.png" id="6_00ir7"]

[node name="SwitchThemeDialog" type="AcceptDialog"]
title = "Switch Theme"
size = Vector2i(400, 300)
script = ExtResource("1_wvycn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 251.0

[node name="Antarctic" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Antarctic"
icon = ExtResource("2_sis6n")
expand_icon = true

[node name="AntarcticNight" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Antarctic (Night)"
icon = ExtResource("3_0nloc")
expand_icon = true

[node name="Cave" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Cave"
icon = ExtResource("4_uvgwp")
expand_icon = true

[node name="Undersea" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Underwater
"
icon = ExtResource("5_om72x")
expand_icon = true

[node name="Castle" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Castle"
icon = ExtResource("6_00ir7")
expand_icon = true

[connection signal="pressed" from="VBoxContainer/Antarctic" to="." method="_on_antarctic_pressed"]
[connection signal="pressed" from="VBoxContainer/AntarcticNight" to="." method="_on_antarctic_night_pressed"]
[connection signal="pressed" from="VBoxContainer/Cave" to="." method="_on_cave_pressed"]
[connection signal="pressed" from="VBoxContainer/Undersea" to="." method="_on_undersea_pressed"]
[connection signal="pressed" from="VBoxContainer/Castle" to="." method="_on_castle_pressed"]
